# MySuperWhisper

./: CONTRIBUTING.md  README.md  install.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: main.yml
mysuperwhisper/: audio.py  config.py  keyboard.py  main.py  paste.py  transcription.py  tray.py
