[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mysuperwhisper"
version = "1.1.0"
description = "Global Voice Dictation for Linux using Whisper AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Olivier Mary", email = "olivier@example.com"}
]
keywords = [
    "whisper",
    "speech-to-text",
    "voice-dictation",
    "transcription",
    "linux",
    "accessibility"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Accessibility",
]
requires-python = ">=3.8"
dependencies = [
    "faster-whisper>=0.9.0",
    "sounddevice>=0.4.6",
    "numpy>=1.21.0",
    "pyperclip>=1.8.2",
    "pynput>=1.7.6",
    "pystray>=0.19.4",
    "Pillow>=12.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/oliviermary/MySuperWhisper"
Repository = "https://github.com/oliviermary/MySuperWhisper.git"
Issues = "https://github.com/oliviermary/MySuperWhisper/issues"

[project.scripts]
mysuperwhisper = "mysuperwhisper.main:main"

[tool.setuptools.packages.find]
include = ["mysuperwhisper*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "venv", "build", "dist"]
